Adiciona novos modelos ao notebooK

--- a/notebooks/03.2_machine_learning.ipynb
+++ b/notebooks/03.2_machine_learning.ipynb
@@ -27,8 +27,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-30T17:50:57.070869Z",
-     "start_time": "2025-12-30T17:50:57.067692Z"
+     "end_time": "2025-12-30T22:35:02.855978Z",
+     "start_time": "2025-12-30T22:35:00.692097Z"
     }
    },
    "cell_type": "code",
@@ -42,7 +42,6 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from plotly.graph_objs.indicator.gauge import Threshold\n",
     "\n",
     "# Pré-processamento e escalonamento\n",
     "\n",
@@ -53,25 +52,24 @@
     "\n",
     "from imblearn.combine import SMOTETomek\n",
     "from imblearn.pipeline import Pipeline\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "# Modelos de Machine Learning\n",
     "from xgboost import XGBClassifier\n",
-    "from lightgbm import LGBMClassifier\n",
-    "from catboost import CatBoostClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier, VotingClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, VotingClassifier, HistGradientBoostingClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# Métricas de Avaliação\n",
     "from sklearn.metrics import (\n",
     "    classification_report,\n",
     "    confusion_matrix,\n",
-    "    f1_score,\n",
     "    recall_score,\n",
     "    precision_score,\n",
     "    ConfusionMatrixDisplay,\n",
     "    precision_recall_curve,\n",
-    "    classification_report\n",
+    "    classification_report,\n",
+    "    fbeta_score,\n",
+    "    make_scorer,\n",
+    "    f1_score\n",
     ")\n",
     "\n",
     "\n",
@@ -80,13 +78,13 @@
    ],
    "id": "20ec8fd283738f25",
    "outputs": [],
-   "execution_count": 42
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-30T17:51:00.512484Z",
-     "start_time": "2025-12-30T17:51:00.510111Z"
+     "end_time": "2025-12-30T22:35:05.605948Z",
+     "start_time": "2025-12-30T22:35:05.603581Z"
     }
    },
    "cell_type": "code",
@@ -105,7 +103,7 @@
    ],
    "id": "b5007d5196842f86",
    "outputs": [],
-   "execution_count": 43
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -116,8 +114,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-30T17:51:02.428909Z",
-     "start_time": "2025-12-30T17:51:02.410553Z"
+     "end_time": "2025-12-30T22:35:07.430809Z",
+     "start_time": "2025-12-30T22:35:07.387028Z"
     }
    },
    "cell_type": "code",
@@ -328,12 +326,12 @@
        "</div>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 44
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -360,8 +358,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-30T17:51:59.534681Z",
-     "start_time": "2025-12-30T17:51:59.529230Z"
+     "end_time": "2025-12-30T22:35:11.168941Z",
+     "start_time": "2025-12-30T22:35:11.164081Z"
     }
    },
    "cell_type": "code",
@@ -389,13 +387,13 @@
    ],
    "id": "7f724aae2a49712",
    "outputs": [],
-   "execution_count": 45
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-30T17:52:00.772636Z",
-     "start_time": "2025-12-30T17:52:00.762733Z"
+     "end_time": "2025-12-30T22:35:14.139865Z",
+     "start_time": "2025-12-30T22:35:14.130725Z"
     }
    },
    "cell_type": "code",
@@ -611,12 +609,12 @@
        "</div>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 46
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -633,8 +631,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-30T17:52:07.628369Z",
-     "start_time": "2025-12-30T17:52:07.556965Z"
+     "end_time": "2025-12-30T22:35:15.937110Z",
+     "start_time": "2025-12-30T22:35:15.843469Z"
     }
    },
    "cell_type": "code",
@@ -661,13 +659,13 @@
      }
     }
    ],
-   "execution_count": 47
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-30T17:52:09.311921Z",
-     "start_time": "2025-12-30T17:52:09.241760Z"
+     "end_time": "2025-12-30T22:35:17.265854Z",
+     "start_time": "2025-12-30T22:35:17.195671Z"
     }
    },
    "cell_type": "code",
@@ -694,7 +692,7 @@
      }
     }
    ],
-   "execution_count": 48
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -705,8 +703,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-30T17:52:10.754553Z",
-     "start_time": "2025-12-30T17:52:10.742716Z"
+     "end_time": "2025-12-30T22:35:18.559306Z",
+     "start_time": "2025-12-30T22:35:18.547807Z"
     }
    },
    "cell_type": "code",
@@ -937,18 +935,18 @@
        "</div>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 49
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-30T17:52:12.411886Z",
-     "start_time": "2025-12-30T17:52:12.340147Z"
+     "end_time": "2025-12-30T22:35:20.056858Z",
+     "start_time": "2025-12-30T22:35:19.985205Z"
     }
    },
    "cell_type": "code",
@@ -975,13 +973,13 @@
      }
     }
    ],
-   "execution_count": 50
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-30T17:52:14.492250Z",
-     "start_time": "2025-12-30T17:52:14.424839Z"
+     "end_time": "2025-12-30T22:35:21.426821Z",
+     "start_time": "2025-12-30T22:35:21.361793Z"
     }
    },
    "cell_type": "code",
@@ -1008,7 +1006,7 @@
      }
     }
    ],
-   "execution_count": 51
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -1028,8 +1026,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-30T17:52:20.367754Z",
-     "start_time": "2025-12-30T17:52:19.726088Z"
+     "end_time": "2025-12-30T22:35:23.727647Z",
+     "start_time": "2025-12-30T22:35:22.933555Z"
     }
    },
    "cell_type": "code",
@@ -1063,7 +1061,7 @@
      }
     }
    ],
-   "execution_count": 52
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -1083,8 +1081,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-30T17:52:58.625052Z",
-     "start_time": "2025-12-30T17:52:58.621466Z"
+     "end_time": "2025-12-30T22:35:25.848651Z",
+     "start_time": "2025-12-30T22:35:25.845085Z"
     }
    },
    "cell_type": "code",
@@ -1104,7 +1102,7 @@
     "    'status_inadimplencia'\n",
     "]\n",
     "\n",
-    "# 2. Usando o df.drop para remover o que NÃO está na lista acima\n",
+    "# removendo o que NÃO está na lista acima\n",
     "\n",
     "df_limpo = df.drop(columns=df.columns.difference(colunas_para_manter))\n",
     "\n",
@@ -1123,7 +1121,7 @@
      ]
     }
    ],
-   "execution_count": 53
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -1132,10 +1130,28 @@
    "id": "28ccea3c3fa66a2a"
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Dentro da pipeline, iremos utilizar dois parâmetros:\n",
+    "* F1 score: consiste na média harmônica entre a precisão (de todas as vezes que o modelo previu algo como positivo, quantas estavam realmente corretas) e o recall (de todos os casos positivos que realmente existiam, quantos o modelo conseguiu detectar);\n",
+    "* F-beta score: média harmônica ponderada entre precisão e recall. Se beta > 1, o recall tem mais peso e se beta < 1, a precisão tem mais peso.\n",
+    "\n",
+    "Por que estes dois parâmetros? O F1 score é a versão padrão, e o F beta score pode ser utilizado para decidir o que é mais importante: evitar falsos alarmes (precisão) ou não deixar um inadimplente escapar (recall). Em sistemas de risco de bancos, é mais comum perder alguns bons pagantes do que aceitar um inadimplente que pode causar R$50.000 de prejuízo."
+   ],
+   "id": "a2012fd65448c5c8"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "5.1 Separando as colunas variáveis (matriz X) e coluna target (array y)",
+   "id": "869b1f8f2ca4ef1a"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-30T17:52:59.974915Z",
-     "start_time": "2025-12-30T17:52:59.970155Z"
+     "end_time": "2025-12-30T22:35:28.769700Z",
+     "start_time": "2025-12-30T22:35:28.764915Z"
     }
    },
    "cell_type": "code",
@@ -1147,13 +1163,25 @@
    ],
    "id": "a3e325d6a79590a4",
    "outputs": [],
-   "execution_count": 54
+   "execution_count": 13
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "5.2 Buscando os melhores hiperparâmetros e os melhores modelos",
+   "id": "5b1394d7afce5779"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Iremos selecionar alguns modelos e para cada modelos alguns hiperparâmetros (hyperparameter tuning) através do RandomizedSearchCV. Os modelos escolhidos serão",
+   "id": "b189d7a600d3b40e"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-30T17:53:45.149260Z",
-     "start_time": "2025-12-30T17:53:00.883020Z"
+     "end_time": "2025-12-30T22:45:15.601831Z",
+     "start_time": "2025-12-30T22:44:46.248133Z"
     }
    },
    "cell_type": "code",
@@ -1186,21 +1214,25 @@
     "        'classifier__gamma': [0, 0.1, 0.2]\n",
     "    },\n",
     "\n",
-    "    \"CatBoost\": {\n",
-    "        'classifier__iterations': [500, 1000],\n",
+    "    \"HistGB\":{\n",
     "        'classifier__learning_rate': [0.01, 0.05, 0.1],\n",
-    "        'classifier__depth': [4, 6, 8, 10],\n",
-    "        'classifier__l2_leaf_reg': [1, 3, 5, 9],\n",
-    "        'classifier__border_count': [32, 5, 254],\n",
-    "        'classifier__bagging_temperature': [0, 1]\n",
+    "        'classifier__max_iter': [100, 200, 300],\n",
+    "        'classifier__max_depth': [3, 5, 10],\n",
+    "        'classifier__l2_regularization': [0, 0.1, 1.0]\n",
     "    }\n",
+    "\n",
     "}\n",
     "\n",
     "modelos = {\n",
     "    'Logistic Regression' : LogisticRegression(max_iter = 1000),\n",
     "    'Random Forest' : RandomForestClassifier(random_state=42),\n",
     "    'XGBoost' : XGBClassifier(random_state=42, verbosity=0 ),\n",
-    "    'CatBoost' : CatBoostClassifier(random_state=42, silent=True, allow_writing_files=False)\n",
+    "    'HistGB': HistGradientBoostingClassifier(random_state=42),\n",
+    "}\n",
+    "\n",
+    "scorers = {\n",
+    "    'f1': make_scorer(f1_score),\n",
+    "    'f2': make_scorer(fbeta_score, beta=2)\n",
     "}\n",
     "\n",
     "# Verificações antes do treinamento dos modelos\n",
@@ -1216,6 +1248,7 @@
     "for i, (_, val_idx) in enumerate(skf.split(X_train, y_train)):\n",
     "    print(f\"Fold {i}: {y_train.iloc[val_idx].value_counts().to_dict()}\")\n",
     "\n",
+    "\n",
     "for nome, modelo in modelos.items():\n",
     "    pipeline = Pipeline([\n",
     "        ('scaler', RobustScaler()),\n",
@@ -1228,21 +1261,30 @@
     "        param_distributions=grids[nome],\n",
     "        n_iter=10,\n",
     "        cv=5,\n",
-    "        scoring='f1',\n",
-    "        n_jobs=-1,\n",
+    "        scoring=scorers,\n",
+    "        refit='f2', # define o melhor modelo com base no f2 e não no f1\n",
+    "        n_jobs=1,\n",
     "        random_state=42,\n",
     "        verbose=0\n",
     "    )\n",
     "\n",
     "    search.fit(X_train, y_train)\n",
+    "\n",
+    "    idx_melhor = search.best_index_\n",
+    "    f1_cv = search.cv_results_['mean_test_f1'][idx_melhor]\n",
+    "    f2_cv = search.cv_results_['mean_test_f2'][idx_melhor]\n",
+    "\n",
     "    melhores_modelos[nome] = search.best_estimator_\n",
+    "\n",
     "    resultados.append({\n",
     "        'Modelo': nome,\n",
-    "        'Melhor F1 (Treino/CV)': search.best_score_,\n",
+    "        'Melhor F1 (Treino/CV)': f1_cv,\n",
+    "        \"Melhor F2 (Treino/CV)\": f2_cv,\n",
     "        'Melhores Parâmetros': search.best_params_\n",
     "    })\n",
     "\n",
-    "    print(f\"✅ {nome} finalizado. F1-Score: {search.best_score_:.4f}\")\n"
+    "    print(f\"✅ {nome} finalizado. F1-Score: {f1_cv:.4f}\")\n",
+    "    print(f\"✅ {nome} finalizado. F2-Score: {f2_cv:.4f}\")\n"
    ],
    "id": "bae02eb8b2e63341",
    "outputs": [
@@ -1262,110 +1304,22 @@
       "Fold 3: {0: 112, 1: 48}\n",
       "Fold 4: {0: 112, 1: 48}\n",
       "✅ Logistic Regression finalizado. F1-Score: 0.5780\n",
+      "✅ Logistic Regression finalizado. F2-Score: 0.6638\n",
       "✅ Random Forest finalizado. F1-Score: 0.5601\n",
+      "✅ Random Forest finalizado. F2-Score: 0.5805\n",
       "✅ XGBoost finalizado. F1-Score: 0.5621\n",
-      "✅ CatBoost finalizado. F1-Score: nan\n"
+      "✅ XGBoost finalizado. F2-Score: 0.6468\n",
+      "✅ HistGB finalizado. F1-Score: 0.5572\n",
+      "✅ HistGB finalizado. F2-Score: 0.6438\n"
      ]
     }
    ],
-   "execution_count": 55
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-30T18:00:21.014554Z",
-     "start_time": "2025-12-30T18:00:21.008616Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "df_resultados = pd.DataFrame(resultados).sort_values(by='Melhor F1 (Treino/CV)', ascending = False)\n",
-    "display(df_resultados)"
-   ],
-   "id": "2c817c3cf4409671",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "                Modelo  Melhor F1 (Treino/CV)  \\\n",
-       "0  Logistic Regression               0.578001   \n",
-       "2              XGBoost               0.562071   \n",
-       "1        Random Forest               0.560102   \n",
-       "3             CatBoost                    NaN   \n",
-       "\n",
-       "                                 Melhores Parâmetros  \n",
-       "0  {'classifier__solver': 'liblinear', 'classifie...  \n",
-       "2  {'classifier__subsample': 0.6, 'classifier__n_...  \n",
-       "1  {'classifier__n_estimators': 300, 'classifier_...  \n",
-       "3  {'classifier__learning_rate': 0.01, 'classifie...  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Modelo</th>\n",
-       "      <th>Melhor F1 (Treino/CV)</th>\n",
-       "      <th>Melhores Parâmetros</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Logistic Regression</td>\n",
-       "      <td>0.578001</td>\n",
-       "      <td>{'classifier__solver': 'liblinear', 'classifie...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>XGBoost</td>\n",
-       "      <td>0.562071</td>\n",
-       "      <td>{'classifier__subsample': 0.6, 'classifier__n_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Random Forest</td>\n",
-       "      <td>0.560102</td>\n",
-       "      <td>{'classifier__n_estimators': 300, 'classifier_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CatBoost</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>{'classifier__learning_rate': 0.01, 'classifie...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data",
-     "jetTransient": {
-      "display_id": null
-     }
-    }
-   ],
-   "execution_count": 56
+   "execution_count": 22
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Com base nisso, podemos observar que o XGBoost foi novamente o melhor modelo. No entanto, o F1 score de 0.56 ainda não é o ideal, pois significa que o modelo acerta apenas 56% dos casos. Assim, vamos continuar e buscar otimizar ainda mais o modelo em busca de um valor entre 0.6 e 0.85.",
+   "source": "Com base nisso, podemos observar que o XGBoost o melhor modelo. No entanto, o F1 score de 0.56 ainda não é o ideal, pois significa que o modelo acerta apenas 56% dos casos. Assim, vamos continuar e buscar otimizar ainda mais o modelo em busca de um valor entre 0.6 e 0.85.",
    "id": "a1e8782e51689426"
   },
   {
@@ -1375,12 +1329,7 @@
    "id": "aaed1ee8255c42c1"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-30T18:05:21.249473Z",
-     "start_time": "2025-12-30T18:05:21.231474Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "modelo_v2 = melhores_modelos['Logistic Regression'].named_steps['classifier']\n",
@@ -1393,20 +1342,8 @@
     "print(importancia)"
    ],
    "id": "bc59e9f2c8f38c30",
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'LogisticRegression' object has no attribute 'feature_importances_'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mAttributeError\u001B[39m                            Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[59]\u001B[39m\u001B[32m, line 5\u001B[39m\n\u001B[32m      2\u001B[39m features = X_train.columns\n\u001B[32m      4\u001B[39m \u001B[38;5;66;03m# Criar um DataFrame de importância\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m5\u001B[39m importancia = pd.DataFrame({\u001B[33m'\u001B[39m\u001B[33mfeature\u001B[39m\u001B[33m'\u001B[39m: features, \u001B[33m'\u001B[39m\u001B[33mimportancia\u001B[39m\u001B[33m'\u001B[39m: \u001B[43mmodelo_v2\u001B[49m\u001B[43m.\u001B[49m\u001B[43mfeature_importances_\u001B[49m})\n\u001B[32m      6\u001B[39m importancia = importancia.sort_values(\u001B[33m'\u001B[39m\u001B[33mimportancia\u001B[39m\u001B[33m'\u001B[39m, ascending=\u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[32m      8\u001B[39m \u001B[38;5;28mprint\u001B[39m(importancia)\n",
-      "\u001B[31mAttributeError\u001B[39m: 'LogisticRegression' object has no attribute 'feature_importances_'"
-     ]
-    }
-   ],
-   "execution_count": 59
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
