--- a/notebooks/03.2_machine_learning.ipynb
+++ b/notebooks/03.2_machine_learning.ipynb
@@ -1546,11 +1546,45 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "Para finalizar e preparar o modelo para as próximas etapas do projeto, vamos usar a biblioteca joblib para definir o que queremos levar para a produção.",
+   "id": "84f26b649451733b"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-31T03:30:08.530737Z",
+     "start_time": "2025-12-31T03:30:08.515868Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "8a6879e3acd1cd64"
+   "source": [
+    "dados_saida = {\n",
+    "    'modelo': melhores_modelos['Logistic Regression'], # melhor pipeline\n",
+    "    'features': X_train.columns.tolist(),              # ordem das colunas\n",
+    "    'threshold_f2': best_thr_f2,                       # limiar que foi otimizado\n",
+    "    'metricas': {\n",
+    "        'f2_score': 0.6752,\n",
+    "        'tipo_modelo': 'Regressão Logística'           # metricas do modelo\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "file_name = 'modelo_credito_final.joblib'\n",
+    "joblib.dump(dados_saida, file_name)\n",
+    "\n",
+    "print(f\"Modelo exportado para {file_name}\")\n"
+   ],
+   "id": "8a6879e3acd1cd64",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modelo exportado para modelo_credito_final.joblib\n"
+     ]
+    }
+   ],
+   "execution_count": 47
   }
  ],
  "metadata": {
