Adiciona função de engenharia de atributos

--- a/notebooks/03.2_machine_learning.ipynb
+++ b/notebooks/03.2_machine_learning.ipynb
@@ -1055,25 +1055,10 @@
    "execution_count": 11
   },
   {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "Observando a matriz, podemos perceber que algumas das variáveis novas se apresentam como essenciais para o projeto. Assim, iremos manter apenas elas e mais algumas consideradas essenciais para o treinamento dos modelos de Machine Learning.\n",
-    "\n",
-    "Variáveis mais importantes:\n",
-    "\n",
-    "* log_valor_conta_corrente\n",
-    "* cobertura_liquidez\n",
-    "* prazo_meses\n",
-    "* moradia_own"
-   ],
-   "id": "daa8592dedac86b0"
-  },
-  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-30T22:35:25.848651Z",
-     "start_time": "2025-12-30T22:35:25.845085Z"
+     "end_time": "2026-01-05T17:15:00.333541Z",
+     "start_time": "2026-01-05T17:15:00.161549Z"
     }
    },
    "cell_type": "code",
@@ -1104,15 +1089,33 @@
    "id": "3714cb0b597bb392",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Colunas restantes: 12\n",
-      "['idade', 'prazo_meses', 'status_inadimplencia', 'moradia_own', 'moradia_rent', 'comprometimento_renda', 'parcela_mensal_estimada', 'renda_livre_mensal', 'cobertura_liquidez', 'is_conta_corrente_zero', 'log_valor_emprestimo', 'log_valor_conta_corrente']\n"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[1]\u001B[39m\u001B[32m, line 18\u001B[39m\n\u001B[32m      1\u001B[39m colunas_para_manter = [\n\u001B[32m      2\u001B[39m     \u001B[33m'\u001B[39m\u001B[33midade\u001B[39m\u001B[33m'\u001B[39m,\n\u001B[32m      3\u001B[39m     \u001B[33m'\u001B[39m\u001B[33mlog_valor_emprestimo\u001B[39m\u001B[33m'\u001B[39m,\n\u001B[32m   (...)\u001B[39m\u001B[32m     13\u001B[39m     \u001B[33m'\u001B[39m\u001B[33mstatus_inadimplencia\u001B[39m\u001B[33m'\u001B[39m\n\u001B[32m     14\u001B[39m ]\n\u001B[32m     16\u001B[39m \u001B[38;5;66;03m# removendo o que NÃO está na lista acima\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m18\u001B[39m df_limpo = \u001B[43mdf\u001B[49m.drop(columns=df.columns.difference(colunas_para_manter))\n\u001B[32m     20\u001B[39m \u001B[38;5;66;03m# 3. Verificando o resultado\u001B[39;00m\n\u001B[32m     21\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mColunas restantes: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mdf_limpo.shape[\u001B[32m1\u001B[39m]\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m\"\u001B[39m)\n",
+      "\u001B[31mNameError\u001B[39m: name 'df' is not defined"
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Observando a matriz, podemos perceber que algumas das variáveis novas se apresentam como essenciais para o projeto. Assim, iremos manter apenas elas e mais algumas consideradas essenciais para o treinamento dos modelos de Machine Learning.\n",
+    "\n",
+    "Variáveis mais importantes:\n",
+    "\n",
+    "* log_valor_conta_corrente\n",
+    "* cobertura_liquidez\n",
+    "* prazo_meses\n",
+    "* moradia_own"
+   ],
+   "id": "f41c35045c9d97a4"
   },
   {
    "metadata": {},
@@ -1149,7 +1152,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-30T22:35:28.769700Z",
+     "end_time": "2026-01-05T17:15:00.352011593Z",
      "start_time": "2025-12-30T22:35:28.764915Z"
     }
    },
@@ -1179,7 +1182,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-31T02:21:26.368225Z",
+     "end_time": "2026-01-05T17:15:00.353417549Z",
      "start_time": "2025-12-31T02:20:56.759522Z"
     }
    },
@@ -1318,7 +1321,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-31T02:23:43.800082Z",
+     "end_time": "2026-01-05T17:15:00.353985680Z",
      "start_time": "2025-12-31T02:23:43.689668Z"
     }
    },
@@ -1405,7 +1408,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-31T02:33:54.937552Z",
+     "end_time": "2026-01-05T17:15:00.354881523Z",
      "start_time": "2025-12-31T02:33:54.924618Z"
     }
    },
@@ -1470,7 +1473,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-31T02:56:11.047064Z",
+     "end_time": "2026-01-05T17:15:00.355254980Z",
      "start_time": "2025-12-31T02:56:11.036166Z"
     }
    },
@@ -1553,7 +1556,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-31T03:30:08.530737Z",
+     "end_time": "2026-01-05T17:15:00.355661579Z",
      "start_time": "2025-12-31T03:30:08.515868Z"
     }
    },
