--- a/notebooks/03.2_machine_learning.ipynb
+++ b/notebooks/03.2_machine_learning.ipynb
@@ -1572,7 +1572,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "file_name = 'modelo_credito_final.joblib'\n",
+    "file_name = '../modelos/modelo_credito_final.joblib'\n",
     "joblib.dump(dados_saida, file_name)\n",
     "\n",
     "print(f\"Modelo exportado para {file_name}\")\n"
